orchestration/k8s/certbot.yaml
kind: Service
apiVersion: v1
metadata:
  name: certbot
spec:
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: certbot
spec:
  rules:
  - http:
      paths:
      - path: /.well-known/acme-challenge/
        backend:
          serviceName: certbot
          servicePort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: certbot
subsets:
- addresses:
  - ip: 192.168.50.11 
  ports:
  - port: 8000
    protocol: TCP
