orchestration/k8s/ingress-wensleydale.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wensleydale
spec:
  rules:
  - host: wensleydale.192.168.50.11.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: 80
